<resources>
    <string name="app_name">CSI</string>
    <string name="description" >Alexander is the most wanted rubber duck in Western-Europe. His crimes are of a broad spectre, but his favorite is blowning up McDonalds. If he isn\'t blowing up a McDonalds, you will find him selling drugs to middle-aged porcupines in the Middle-East.</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="bounty">Bounty</string>
    <string name="nameVal">Alexander</string>
    <string name="genderVal">Duck</string>
    <string name="ageVal">1</string>
    <string name="bountyVal">$1337</string>
    <string name="report">Report</string>
    <string name="title_activity_report">report</string>
    <string name="takePicture">Take a Picture</string>
    <string name="gps">GPS Position</string>
    <string name="alexander">alexander</string>
    <string name="call">Call 113</string>
    <string name="back">Back</string>
    <string name="send">Send Report</string>
    <string name="title_activity_camera">Camera</string>
    <string name="Back">Back</string>
    <string name="picture">Take a picture</string>
</resources>
