<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#000000">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/alexander"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description"
            android:gravity="center_horizontal"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:paddingTop="10dp"
            android:src="@drawable/alexander"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="144dp"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:weightSum="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:background="#16a085"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            >
            <TableRow android:gravity="center">
                <TextView android:id="@+id/name" android:text="@string/name" android:textSize="20dp" android:paddingRight="70dp"/>
                <TextView android:id="@+id/nameVal" android:text="@string/nameVal" android:textSize="20dp"/>
            </TableRow>
            <TableRow android:gravity="center">
                <TextView android:id="@+id/gender" android:text="@string/gender" android:textSize="20dp" android:paddingRight="70dp"/>
                <TextView android:id="@+id/genderVal" android:text="@string/genderVal" android:textSize="20dp"/>
            </TableRow>
            <TableRow android:gravity="center">
                <TextView android:id="@+id/age" android:text="@string/age" android:textSize="20dp" android:paddingRight="70dp"/>
                <TextView android:id="@+id/ageVal" android:text="@string/ageVal" android:textSize="20dp"/>
            </TableRow>
            <TableRow android:gravity="center">
                <TextView android:id="@+id/bounty" android:text="@string/bounty" android:textSize="20sp" android:paddingRight="70dp"/>
                <TextView android:id="@+id/bountyVal" android:text="@string/bountyVal" android:textSize="20sp"/>


            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:background="#000000"
        android:layout_height="93dp"
        android:layout_width="match_parent">

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_height="90dp"
            android:layout_width="fill_parent">

            <TextView
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/description"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
            />
        </ScrollView>

    </LinearLayout>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/report"
            android:id="@+id/buttonReport"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickForward"/>



</LinearLayout>